--- a/Mobile/pubspec.yaml
+++ b/Mobile/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
   cupertino_icons: ^1.0.6
+  fl_chart: ^0.60.0
 
 dev_dependencies:
   flutter_test:
