--- a/Mobile/pubspec.yaml
+++ b/Mobile/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.8
-  flutter_blue: ^0.8.0
+  # flutter_blue: ^0.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +39,9 @@ dependencies:
   provider: ^6.0.0
   cupertino_icons: ^1.0.6
   fl_chart: ^0.60.0
+  all_bluetooth: ^0.1.0
+  permission_handler: ^11.3.1
+  flutter_bluetooth_serial:
 
 dev_dependencies:
   flutter_test:
