--- a/Mobile/android/app/src/main/AndroidManifest.xml
+++ b/Mobile/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <application
         android:label="smart_dumbbell_mobile"
         android:name="${applicationName}"
