--- a/Mobile/pubspec.yaml
+++ b/Mobile/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   english_words: ^4.0.0
   cupertino_icons: ^1.0.6
   fl_chart: ^0.68.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
