--- a/Mobile/pubspec.yaml
+++ b/Mobile/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_reactive_ble: ^5.2.0
   logger: ^2.2.0
   provider: ^6.1.2
+  permission_handler: ^11.3.1
+  file_picker: ^8.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
